--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,13 +53,22 @@
             android:label="@string/login_4"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".AddAimActivity"
+            android:exported="true"
+            android:label="@string/addaim"
+            android:screenOrientation="portrait" />
+        <activity
+            android:name=".SetTimeActivity"
+            android:exported="true"
+            android:label="@string/settime"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/title_activity_main"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
-        <activity android:name=".AddAimActivity" />
-        <activity android:name=".SetTimeActivity"></activity>
+
     </application>
 
 </manifest>
