Ck:日程数据库导入

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -63,6 +63,11 @@
             android:label="@string/settime"
             android:screenOrientation="portrait" />
         <activity
+            android:name=".PersonalCenterActivity"
+            android:exported="true"
+            android:label="个人中心"
+            android:screenOrientation="portrait" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="今天"
